--- a/src/components/CallButtons.scss
+++ b/src/components/CallButtons.scss
@@ -101,6 +101,14 @@
             user-select: none;
             padding: 4px 4px 4px 0px;
             cursor: pointer;
+            p {
+                width: 100%;
+                max-width: 152px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-size: 16px;
+            }
             &:hover {
                 background: hsl(0, 0%, 30%);
             }
