--- a/src/components/Channels.scss
+++ b/src/components/Channels.scss
@@ -167,6 +167,13 @@
                     .channel-chatter-left {
                         display: flex;
                         align-items: center;
+                        p {
+                            max-width: 132px;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            font-size: 12px;
+                        }
                     }
                     .channel-chatter-right {
                         display: flex;
